Fix not scrollable on mobile

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 /* start: Chat */
 .chat-section {
     box-shadow: inset 0 160px 0 0 var(--blue-600);
-    min-height: 100vh;
+    min-height: 100dvh;
     /* height: 10%; */
     display: flex;
     align-items: center;
@@ -783,7 +783,7 @@ body {
 @media screen and (max-width: 1600px) {
     .chat-container {
         max-width: unset;
-        height: 100vh;
+        height: 100dvh;
     }
 }
 
@@ -849,7 +849,7 @@ body {
     .chat-content {
         position: relative;
         padding-top: 156px;
-        height: calc(100% - 48px);
+        /* height: calc(100% - 48px); */
     }
     .conversation.active {
         position: relative;
